--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,7 +11,37 @@
     tools:context="at.fh.swengb.resifo_android.MainActivity">
 
     <TextView
+        android:text="WELCOME"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="50dp"
+        android:id="@+id/textView_welcome"
+        android:textSize="36sp"
+        android:layout_weight="1"
+        android:textAlignment="center" />
+
+    <TextView
+        android:text="Please select a language"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/textView_selectLanguage"
+        android:textAlignment="center"
+        android:textSize="24sp"
+        android:layout_below="@+id/textView_welcome"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="31dp" />
+
+    <ProgressBar
+        style="?android:attr/progressBarStyleHorizontal"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!" />
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentStart="true"
+        android:id="@+id/progressBar2"
+        android:layout_alignParentEnd="true"
+        android:max="100"
+        android:progress="0" />
+
 </RelativeLayout>
