--- a/app/src/main/res/layout/activity_formular02.xml
+++ b/app/src/main/res/layout/activity_formular02.xml
@@ -23,16 +23,6 @@
         android:textAlignment="center" />
 
     <Button
-        android:text="JA"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginStart="77dp"
-        android:id="@+id/button_ja"
-        android:textAlignment="center" />
-
-    <Button
         android:text="NEIN"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -40,25 +30,20 @@
         android:layout_toEndOf="@+id/button_ja"
         android:layout_marginStart="28dp"
         android:id="@+id/button_nein"
-        android:textAlignment="center" />
+        android:textAlignment="center"
+        android:layout_alignBottom="@+id/button_ja"
+        android:onClick="zmrNo" />
 
 
 
     <Button
-        android:text="<<   Zurück"
+        android:text="Zurück"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/button_zurueck"
         android:layout_above="@+id/progressBar2"
-        android:layout_alignParentStart="true" />
-
-    <Button
-        android:text="Weiter   >>"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/button_weiter"
-        android:layout_above="@+id/progressBar2"
-        android:layout_alignParentEnd="true" />
+        android:layout_alignParentStart="true"
+        android:onClick="getPrev" />
 
     <ProgressBar
         style="?android:attr/progressBarStyleHorizontal"
@@ -70,8 +55,19 @@
         android:layout_alignParentStart="true"
         android:visibility="visible"
         android:max="100"
-        android:progress="20"
+        android:progress="10"
         android:indeterminate="false" />
+
+    <Button
+        android:text="JA"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="73dp"
+        android:id="@+id/button_ja"
+        android:textAlignment="center"
+        android:layout_centerVertical="true"
+        android:layout_alignParentStart="true"
+        android:onClick="zmrYes" />
 
 
 </RelativeLayout>
