--- a/app/src/main/res/layout/activity_formular04.xml
+++ b/app/src/main/res/layout/activity_formular04.xml
@@ -10,31 +10,23 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="at.fh.swengb.resifo_android.Formular04Activity">
 
-    <TextView
-        android:text="Ihre Reisedokumente"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="96dp"
-        android:textSize="40sp"
-        android:textAlignment="center"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true" />
-
     <Button
-        android:text="<<   Zurück"
+        android:text="Zurück"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/button_zurueck"
         android:layout_above="@+id/progressBar2"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:onClick="getPrev" />
 
     <Button
-        android:text="Weiter   >>"
+        android:text="Weiter "
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/button_weiter"
         android:layout_above="@+id/progressBar2"
-        android:layout_alignParentEnd="true" />
+        android:layout_alignParentEnd="true"
+        android:onClick="getNext" />
 
     <ProgressBar
         style="?android:attr/progressBarStyleHorizontal"
@@ -48,5 +40,41 @@
         android:max="100"
         android:progress="20"
         android:indeterminate="false" />
+
+    <TextView
+        android:text="Art:"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/textView6"
+        android:layout_centerVertical="true"
+        android:layout_alignParentStart="true" />
+
+    <TextView
+        android:text="Ausstellungsdatum:"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/textView6"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="36dp"
+        android:id="@+id/textView7" />
+
+    <TextView
+        android:text="auszustellende Behörde:"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/textView7"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="30dp"
+        android:id="@+id/textView8" />
+
+    <TextView
+        android:text="Ihre Reisedokumente"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="40sp"
+        android:textAlignment="center"
+        android:layout_marginBottom="64dp"
+        android:layout_above="@+id/textView6"
+        android:layout_alignParentStart="true" />
 
 </RelativeLayout>
