--- a/app/src/main/res/layout/activity_formular01.xml
+++ b/app/src/main/res/layout/activity_formular01.xml
@@ -28,7 +28,7 @@
                     android:text="Persönliche Daten"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:id="@+id/textView"
+                    android:id="@+id/textView_titel"
                     android:textSize="36sp"
                     android:layout_marginTop="20dp" />
 
@@ -37,11 +37,11 @@
                     android:layout_height="wrap_content"
                     android:inputType="textPersonName"
                     android:ems="10"
-                    android:id="@+id/editText"
+                    android:id="@+id/editText_anrede"
                     android:layout_alignBaseline="@+id/textView_anrede"
                     android:layout_alignBottom="@+id/textView_anrede"
                     android:layout_alignParentStart="true"
-                    android:hint="Anrede"
+                    android:hint="Anrede (Herr/Frau)"
                     android:layout_marginTop="20dp" />
 
                 <EditText
@@ -49,7 +49,7 @@
                     android:layout_height="wrap_content"
                     android:inputType="textPersonName"
                     android:ems="10"
-                    android:id="@+id/editText8"
+                    android:id="@+id/editText_titel"
                     android:hint="Titel" />
 
                 <EditText
@@ -57,9 +57,9 @@
                     android:layout_height="wrap_content"
                     android:inputType="textPersonName"
                     android:ems="10"
-                    android:layout_below="@+id/editText"
-                    android:layout_alignEnd="@+id/editText"
-                    android:id="@+id/editText2"
+                    android:layout_below="@+id/editText_anrede"
+                    android:layout_alignEnd="@+id/editText_anrede"
+                    android:id="@+id/editText_famname"
                     android:hint="Familienname" />
 
                 <EditText
@@ -67,9 +67,9 @@
                     android:layout_height="wrap_content"
                     android:inputType="textPersonName"
                     android:ems="10"
-                    android:layout_below="@+id/editText2"
+                    android:layout_below="@+id/editText_famname"
                     android:layout_alignParentStart="true"
-                    android:id="@+id/editText3"
+                    android:id="@+id/editText3_vorname"
                     android:hint="Vorname" />
 
                 <EditText
@@ -77,19 +77,19 @@
                     android:layout_height="wrap_content"
                     android:inputType="date"
                     android:ems="10"
-                    android:layout_below="@+id/editText3"
+                    android:layout_below="@+id/editText3_vorname"
                     android:layout_alignParentStart="true"
-                    android:id="@+id/editText4"
-                    android:hint="Geburtsdatum" />
+                    android:id="@+id/editText_gebdatum"
+                    android:hint="Geburtsdatum (TT.MM.JJJJ)" />
 
                 <EditText
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:inputType="textPersonName"
                     android:ems="10"
-                    android:layout_below="@+id/editText4"
+                    android:layout_below="@+id/editText_gebdatum"
                     android:layout_alignParentStart="true"
-                    android:id="@+id/editText5"
+                    android:id="@+id/editText_gebort"
                     android:hint="Geburtsort" />
 
                 <EditText
@@ -97,9 +97,9 @@
                     android:layout_height="wrap_content"
                     android:inputType="textPersonName"
                     android:ems="10"
-                    android:layout_below="@+id/editText5"
+                    android:layout_below="@+id/editText_gebort"
                     android:layout_alignParentStart="true"
-                    android:id="@+id/editText6"
+                    android:id="@+id/editText_famstand"
                     android:hint="Familienstand" />
 
                 <EditText
@@ -107,9 +107,9 @@
                     android:layout_height="wrap_content"
                     android:inputType="textPersonName"
                     android:ems="10"
-                    android:layout_below="@+id/editText6"
+                    android:layout_below="@+id/editText_famstand"
                     android:layout_alignParentStart="true"
-                    android:id="@+id/editText7"
+                    android:id="@+id/editText_staat"
                     android:hint="Staatsangehörigkeit"
                     android:layout_marginBottom="20dp" />
 
@@ -130,7 +130,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_alignParentBottom="true"
-                    android:id="@+id/progressBar2"
+                    android:id="@+id/progressBar"
                     android:layout_alignParentEnd="true"
                     android:layout_alignParentStart="true"
                     android:visibility="visible"
