--- a/app/src/main/res/layout/activity_edit_person.xml
+++ b/app/src/main/res/layout/activity_edit_person.xml
@@ -18,14 +18,6 @@
         android:layout_alignParentEnd="true"
         android:id="@+id/button_bearbeiten" />
 
-    <Button
-        android:text="Löschen "
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/button_loeschen"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentStart="true" />
-
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -35,5 +27,13 @@
         android:id="@+id/textView_zusammenfassung"
         android:layout_above="@+id/button_bearbeiten"
         android:layout_alignParentEnd="true" />
+
+    <Button
+        android:text="Löschen "
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/button_zurueck"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentStart="true" />
 
 </RelativeLayout>
