--- a/app/src/main/res/layout/activity_formular04.xml
+++ b/app/src/main/res/layout/activity_formular04.xml
@@ -15,7 +15,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/button_zurueck"
-        android:layout_above="@+id/progressBar2"
+        android:layout_above="@+id/progressBar"
         android:layout_alignParentStart="true"
         android:onClick="getPrev" />
 
@@ -24,7 +24,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/button_weiter"
-        android:layout_above="@+id/progressBar2"
+        android:layout_above="@+id/progressBar"
         android:layout_alignParentEnd="true"
         android:onClick="getNext" />
 
@@ -33,19 +33,19 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:id="@+id/progressBar2"
+        android:id="@+id/progressBar"
         android:layout_alignParentEnd="true"
         android:layout_alignParentStart="true"
         android:visibility="visible"
         android:max="100"
-        android:progress="20"
+        android:progress="25"
         android:indeterminate="false" />
 
     <TextView
         android:text="Art:"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/textView6"
+        android:id="@+id/textView_art"
         android:layout_centerVertical="true"
         android:layout_alignParentStart="true" />
 
@@ -53,19 +53,19 @@
         android:text="Ausstellungsdatum:"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/textView6"
+        android:layout_below="@+id/textView_art"
         android:layout_alignParentStart="true"
         android:layout_marginTop="36dp"
-        android:id="@+id/textView7" />
+        android:id="@+id/textView_ausdatum" />
 
     <TextView
         android:text="auszustellende Behörde:"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/textView7"
+        android:layout_below="@+id/textView_ausdatum"
         android:layout_alignParentStart="true"
         android:layout_marginTop="30dp"
-        android:id="@+id/textView8" />
+        android:id="@+id/textView_beh" />
 
     <TextView
         android:text="Ihre Reisedokumente"
@@ -73,8 +73,9 @@
         android:layout_height="wrap_content"
         android:textSize="40sp"
         android:textAlignment="center"
-        android:layout_marginBottom="64dp"
-        android:layout_above="@+id/textView6"
-        android:layout_alignParentStart="true" />
+        android:id="@+id/textView_reisedokumente"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="20dp" />
 
 </RelativeLayout>
