--- a/app/src/main/res/layout/activity_formular06.xml
+++ b/app/src/main/res/layout/activity_formular06.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/activity_formular05"
+    android:id="@+id/activity_formular06"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="at.fh.swengb.resifo_android.Formular05Activity">
+    tools:context="at.fh.swengb.resifo_android.Formular06Activity">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -18,7 +18,7 @@
         android:id="@+id/relativeLayout">
 
         <TextView
-            android:text="Anmeldung der Unterkunft in:"
+            android:text="Abmeldung der Unterkunft in:"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="36sp"
@@ -26,7 +26,7 @@
             android:layout_alignParentTop="true"
             android:layout_alignParentStart="true"
             android:layout_marginTop="20dp"
-            android:id="@+id/textView_anmeldung" />
+            android:id="@+id/textView_abmeldung" />
 
         <TextView
             android:text="Land:"
@@ -38,11 +38,11 @@
             android:layout_marginTop="122dp" />
 
         <TextView
-        android:text="PLZ:"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:id="@+id/textView_plz"
+            android:text="PLZ:"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:id="@+id/textView_plz"
             android:layout_below="@+id/textView_land"
             android:layout_alignEnd="@+id/textView_land" />
 
@@ -56,72 +56,22 @@
             android:layout_alignEnd="@+id/textView_plz" />
 
         <TextView
-        android:text="Straße: "
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/textView_strasse"
-        android:layout_centerVertical="true"
-        android:layout_alignParentStart="true" />
-
-        <TextView
-            android:text="Hausnr.:"
+            android:text="Straße: "
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/textView_hausNr"
-            android:layout_above="@+id/textView_hauptwohnsitz"
-            android:layout_alignParentStart="true"
-            android:layout_marginBottom="32dp" />
+            android:id="@+id/textView_strasse"
+            android:layout_centerVertical="true"
+            android:layout_alignParentStart="true" />
 
         <TextView
-        android:text="Stiege:"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/textView_stiege"
+            android:text="Stiege:"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/textView_stiege"
             android:layout_alignBaseline="@+id/textView_hausNr"
             android:layout_alignBottom="@+id/textView_hausNr"
             android:layout_toEndOf="@+id/button_zurueck"
             android:layout_marginStart="37dp" />
-
-        <TextView
-        android:text="Türnr.:"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-            android:id="@+id/textView_tuerNr"
-            android:layout_alignBaseline="@+id/textView_stiege"
-            android:layout_alignBottom="@+id/textView_stiege"
-            android:layout_toEndOf="@+id/button_nein" />
-
-        <TextView
-            android:text="Ist diese Unterkunft Hauptwohnsitz?"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/textView_hauptwohnsitz"
-            android:layout_above="@+id/button_zurueck"
-            android:layout_alignParentStart="true"
-            android:layout_marginBottom="70dp"
-            android:layout_alignParentEnd="true"
-            android:textAlignment="center" />
-
-        <Button
-            android:text="JA"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/button_ja"
-            android:layout_marginTop="22dp"
-            android:layout_marginStart="72dp"
-            android:onClick="hwsYes"
-            android:layout_alignTop="@+id/textView_hauptwohnsitz"
-            android:layout_alignParentStart="true" />
-
-        <Button
-            android:text="NEIN"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/button_nein"
-            android:layout_alignBaseline="@+id/button_ja"
-            android:layout_alignBottom="@+id/button_ja"
-            android:layout_toEndOf="@+id/button_ja"
-            android:onClick="hwsNo" />
 
         <Button
             android:text="Zurück"
@@ -131,6 +81,15 @@
             android:layout_above="@+id/progressBar"
             android:layout_alignParentStart="true"
             android:onClick="getPrev" />
+
+        <Button
+            android:text="Weiter"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/button_weiter"
+            android:layout_above="@+id/progressBar"
+            android:layout_alignParentEnd="true"
+            android:onClick="getNext" />
 
         <ProgressBar
             style="?android:attr/progressBarStyleHorizontal"
@@ -142,8 +101,27 @@
             android:layout_alignParentStart="true"
             android:visibility="visible"
             android:max="100"
-            android:progress="37"
+            android:progress="50"
             android:indeterminate="false" />
+
+        <TextView
+            android:text="Hausnr.:"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/textView_hausNr"
+            android:layout_marginTop="32dp"
+            android:layout_below="@+id/textView_strasse"
+            android:layout_alignParentStart="true" />
+
+        <TextView
+            android:text="Türnr.:"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/textView_tuerNr"
+            android:layout_alignBaseline="@+id/textView_stiege"
+            android:layout_alignBottom="@+id/textView_stiege"
+            android:layout_alignParentEnd="true"
+            android:layout_marginEnd="40dp" />
 
     </RelativeLayout>
 
