--- a/app/src/main/res/layout/activity_formular09.xml
+++ b/app/src/main/res/layout/activity_formular09.xml
@@ -1,18 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/activity_formular02"
+    android:id="@+id/activity_formular09"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="at.fh.swengb.resifo_android.Formular02Activity">
+    tools:context="at.fh.swengb.resifo_android.Formular09Activity">
 
 
     <TextView
-        android:text="Kennen Sie Ihre ZMR-Zahl?"
+        android:text="Ziehen Sie aus dem Ausland?"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="60dp"
@@ -21,7 +21,7 @@
         android:layout_alignParentEnd="true"
         android:textSize="40sp"
         android:textAlignment="center"
-        android:id="@+id/textView_zmrYN" />
+        android:id="@+id/textView_ausland" />
 
     <Button
         android:text="NEIN"
@@ -33,7 +33,7 @@
         android:id="@+id/button_nein"
         android:textAlignment="center"
         android:layout_alignBottom="@+id/button_ja"
-        android:onClick="zmrNo" />
+        android:onClick="auslandNo" />
 
 
 
@@ -56,19 +56,18 @@
         android:layout_alignParentStart="true"
         android:visibility="visible"
         android:max="100"
-        android:progress="12"
+        android:progress="62"
         android:indeterminate="false" />
 
     <Button
         android:text="JA"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="57dp"
         android:id="@+id/button_ja"
         android:textAlignment="center"
-        android:onClick="zmrYes"
-        android:layout_marginStart="57dp"
+        android:onClick="auslandYes"
         android:layout_centerVertical="true"
         android:layout_alignParentStart="true" />
-
 
 </RelativeLayout>
