--- a/app/src/main/res/layout/activity_formular11.xml
+++ b/app/src/main/res/layout/activity_formular11.xml
@@ -1,50 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/activity_formular02"
+    android:id="@+id/activity_formular11"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="at.fh.swengb.resifo_android.Formular02Activity">
+    tools:context="at.fh.swengb.resifo_android.Formular11Activity">
 
 
     <TextView
-        android:text="Kennen Sie Ihre ZMR-Zahl?"
+        android:text="Geben Sie die Daten Ihres Unterkunftgebers an:"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="60dp"
         android:layout_alignParentTop="true"
         android:layout_toStartOf="@+id/button_weiter"
         android:layout_alignParentEnd="true"
-        android:textSize="40sp"
-        android:textAlignment="center"
-        android:id="@+id/textView_zmrYN" />
-
-    <Button
-        android:text="NEIN"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignTop="@+id/button_ja"
-        android:layout_toEndOf="@+id/button_ja"
-        android:layout_marginStart="28dp"
-        android:id="@+id/button_nein"
-        android:textAlignment="center"
-        android:layout_alignBottom="@+id/button_ja"
-        android:onClick="zmrNo" />
-
+        android:textSize="30sp"
+        android:textAlignment="viewStart" />
 
 
     <Button
-        android:text="Zurück"
+        android:text="Verwerfen"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/button_zurueck"
         android:layout_above="@+id/progressBar"
         android:layout_alignParentStart="true"
-        android:onClick="getPrev" />
+        android:onClick="goBack" />
 
     <ProgressBar
         style="?android:attr/progressBarStyleHorizontal"
@@ -56,19 +42,37 @@
         android:layout_alignParentStart="true"
         android:visibility="visible"
         android:max="100"
-        android:progress="12"
+        android:progress="87"
         android:indeterminate="false" />
 
-    <Button
-        android:text="JA"
+    <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/button_ja"
-        android:textAlignment="center"
-        android:onClick="zmrYes"
-        android:layout_marginStart="57dp"
+        android:inputType="textPersonName"
+        android:ems="10"
+        android:id="@+id/editText_nachname"
         android:layout_centerVertical="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:hint="Nachname" />
 
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:inputType="textPersonName"
+        android:ems="10"
+        android:id="@+id/editText_vorname"
+        android:layout_below="@+id/editText_nachname"
+        android:layout_alignParentStart="true"
+        android:hint="Vorname" />
+
+    <Button
+        android:text="Speichern"
+        android:layout_width="102dp"
+        android:layout_height="wrap_content"
+        android:id="@+id/button_weiter"
+        android:contextClickable="false"
+        android:layout_above="@+id/progressBar"
+        android:layout_alignParentEnd="true"
+        android:onClick="saveData" />
 
 </RelativeLayout>
