--- a/app/src/main/res/layout/activity_information.xml
+++ b/app/src/main/res/layout/activity_information.xml
@@ -27,44 +27,44 @@
                 android:text="Information für den Meldepflichtigen "
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:id="@+id/textView21"
+                android:id="@+id/textView_titel"
                 android:textAlignment="center"
-                android:textSize="18sp"
+                android:textSize="20sp"
                 android:paddingBottom="30dp" />
 
             <TextView
                 android:text="Eine Anmeldung ist innerhalb von drei Tagen ab Beziehen der Unterkunft, eine Abmeldung innerhalb von drei Tagen vor oder nach Aufgabe der Unterkunft vorzunehmen."
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:id="@+id/textView15"
+                android:id="@+id/textView_text1"
                 android:paddingBottom="20dp" />
 
             <TextView
                 android:text="Bei der Anmeldung benötigen Sie folgende Dokumente: Öffentliche Urkunden, aus denen Familien- oder Nach h- und Vornamen, Familiennamen vor der ersten Eheschließung, Geburtsdatum, Geburtsort und Staatsangehörigkeit des Unterkunftnehmers hervorgehen, z. B. Reisepass und Geburtskunde;  Unterkunftnehmer, die nicht die österreichische Staatsbürgerschaft besitzen (Fremde): Reisedokument (z. B. Reisepass); wenn an der bisherigen Unterkunft aus dem Hauptwohnsitz ein „weiterer Wohnsitz“ wird, ist vor oder gleichzeitig mit Anmeldung des neuen Hauptwohnsitzes eine Ummeldung des bisherigen Hauptwohnsitzes erforderlich."
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:id="@+id/textView16"
+                android:id="@+id/textView_text2"
                 android:paddingBottom="20dp" />
 
             <TextView
                 android:text="Für den Inhalt des Meldezettels ist, unabhängig davon, wer den Meldezettel ausfüllt, immer der Meldepflichtige verantwortlich. Kontrollieren Sie daher bitte den Meldezettel auf Vollständigkeit und Richtigkeit der Eintragungen, auch dann, wenn e r von der Behörde ausgefertigt wird."
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:id="@+id/textView17"
+                android:id="@+id/textView_text3"
                 android:paddingBottom="20dp" />
 
             <TextView
                 android:text="Ihr Hauptwohnsitz ist an jener Unterkunft begründet, an der Sie sich in der Absicht niedergelassen haben, diese zum Mittelpunkt Ihrer Lebensbeziehungen zu machen; trifft diese sachliche Voraussetzung auf mehrere Wohnsitze zu, s o haben Sie jenen als Hauptwohnsitz zu bezeichnen, zu dem Sie das überwiegende Naheverhältnis haben. Für den „Mittelpunkt der Lebensbeziehung“ sind vor allem folgende Bestimmungskriterien maßgeblich: Aufenthaltsdauer, Lage des Arbeitsplatzes oder der Ausbildungsstätte, Ausgangspunkt des Weges zum Arbeitsplatz oder zur Ausbildungsstätte, Wohnsitz der übrigen, insbesondere der minderjährigen Familienangehörigen und der Ort, an dem sie ihrer Erwerbstätigkeit nachgehen, ausgebildet werden oder die Schule oder den Kindergarten besuchen, Funktionen in öffentlichen und privaten Körperschaften. Der Hauptwohnsitz ist für die Eintragung in die „Wählerevidenz“ sowie für verschiedene andere Rechtsbereiche (z. B. Kfz-Zulassung, waffenrechtliche Urkunden, Sozialhilfe) maßgeblich."
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:id="@+id/textView18"
+                android:id="@+id/textView_text4"
                 android:paddingBottom="20dp" />
 
             <TextView
                 android:text="Bedenken Sie bitte, dass eine Änderung des Hauptwohnsitzes oder eines weiteren Wohnsitzes auch noch weitere Mitteilungspflichten (z. B. Kfz-Zulassung) begründen kann.  "
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:id="@+id/textView19"
+                android:id="@+id/textView_text5"
                 android:paddingBottom="20dp" />
         </LinearLayout>
     </ScrollView>
