--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -39,7 +39,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_alignParentStart="true"
-        android:id="@+id/progressBar2"
+        android:id="@+id/progressBar"
         android:layout_alignParentEnd="true"
         android:max="100"
         android:progress="100" />
