--- a/app/src/main/res/layout/activity_select.xml
+++ b/app/src/main/res/layout/activity_select.xml
@@ -21,7 +21,7 @@
         android:maxWidth="60dip"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:onClick="NewForm" />
+        android:onClick="newForm" />
 
     <Button
         android:text="bearbeiten"
@@ -34,7 +34,7 @@
         android:maxWidth="60dip"
         android:layout_below="@+id/button_neu"
         android:layout_alignStart="@+id/button_neu"
-        android:onClick="EditForm" />
+        android:onClick="editForm" />
 
     <Button
         android:text="wichtige information"
